@@ -222,7 +222,7 @@ if ($showList) {
 			foreach (array($family->husb, $family->wife) as $person) {
 				if (!is_object($person)) continue;
 				foreach ($person->getAllNames() as $name) {
-					$surn=reset(explode(',', $name['sort']));
+					$surn=UTF8_strtoupper($name['surn']);
 					// Ignore diacritics - need to use the same logic as get_fam_alpha()
 					// TODO: This ought to be a language-dependent conversion, as in some
 					// languages, letters with diacritics are regarded as separate letters.
@@ -241,13 +241,15 @@ if ($showList) {
 						}
 					}
 					if ($show_all=='yes' || $surname && $surname==$surn || !$surname && $alpha==$initial) {
-						$spfxsurn=reset(explode(',', $name['list']));
 						switch ($surn) {
 						case '@N.N.':
 							$spfxsurn=$pgv_lang['NN'];
 							break;
 						case '':
 							$spfxsurn='('.$pgv_lang['none'].')';
+							break;
+						default:
+							$spfxsurn=$name['spfx'] ? $name['spfx'].' '.$name['surn'] : $name['surn'];
 							break;
 						}
 						if (! array_key_exists($surn, $surnames)) {
